# AIMLUL-Twitch-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE-MIT  README.md  alembic.ini  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt  settings.ini
admin/: Dockerfile  requirements.txt
admin/app/: config.py  dependencies.py  main.py  models.py  routes.py  security.py  ssh_client.py  templates.py  websocket_manager.py
admin/app/routes/: api.py
admin/app/services/: ssh_client.py  websocket_manager.py
admin/app/templates/: base.html  index.html  login.html  logs.html
admin/nginx/: entrypoint.sh  nginx.conf
migrations/: env.py
migrations/versions/: 20260116_add_tickets.py
src/: main.py
src/api/: twitch_api.py
src/bot/: commands_config.py  manager.py  token_refresh.py  twitch_bot.py
src/commands/: command_handler.py  helpers.py  permissions.py  text_inflect.py
src/commands/collectors/: applecat_collector.py  base_collector.py  gnome_collector.py
src/commands/games/: base_game.py  beer_barrel.py  beer_challenge.py  collectors_game.py  simple_commands.py  twenty_one.py
src/commands/managers/: cache_manager.py  user_manager.py
src/commands/models/: chatters.py  game_models.py
src/commands/triggers/: text_triggers.py
src/core/: config_loader.py  redis_client.py
src/db/: database.py  models.py
src/eventsub/: ctx_factory.py  handlers.py  manager.py  reward_handlers.py
src/utils/: helpers.py  token_generator.py  token_manager.py
tests/: conftest.py  test_api.py  test_beer_barrel.py  test_beer_challenge.py  test_bot.py  test_cache_manager.py  test_collectors_game.py  test_db.py  test_eventsub.py  test_main.py  test_redis.py  test_simple_commands_game.py  test_token_generator.py  test_token_manager.py  test_twenty_one.py
