[project]
name = "Twitch_bot"
version = "0.1.0"
description = "Twitch bot for chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "iso8601==2.1.0",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "twitchio==2.10.0",
    "typing-extensions==4.15.0",
    "yarl==1.22.0",
    "requests==2.32.5",
    "configparser==7.2.0",
    "sqlalchemy==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.17.0",
]
