[project]
name = "Twitch_bot"
version = "0.1.0"
description = "Twitch bot for chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "iso8601==2.1.0",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "twitchio==2.10.0",
    "typing-extensions==4.15.0",
    "yarl==1.22.0",
    "requests==2.32.5",
    "configparser==7.2.0",
    "sqlalchemy==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.17.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.21.0",
]


[tool.mypy]
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true
check_untyped_defs = true
exclude = ""

[tool.ruff]
line-length = 120
preview = true
exclude = ["src/infrastructure/migrations/"]

[tool.ruff.lint]
extend-select = ["I", "PTH", "B", "A", "N", "PT", "COM", "E", "W", "UP", "D"]
ignore = ["COM812", "PLR6301", "TRY400", "D100", "D101", "D104", "D106", "D107", "D203", "D212", "D401", "D404", "D405"]
external = ["WPS"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:twitchio",
    "ignore::RuntimeWarning"
]
