[project]
name = "Twitch_bot"
version = "0.1.0"
description = "Twitch bot for chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "iso8601==2.1.0",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "twitchio==2.10.0",
    "typing-extensions==4.15.0",
    "yarl==1.22.0",
    "requests==2.32.5",
    "configparser==7.2.0",
    "sqlalchemy[asyncio]==2.0.44",
    "asyncpg==0.31.0",
    "alembic==1.17.2",
    "pydantic==2.12.5",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.21.0",
    "ruff>=0.14.6",
    "greenlet>=3.2.4",
    "mypy>=1.18.2",
    "black>=25.11.0",
    "types-requests>=2.32.4.20250913",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "jinja2>=3.1.6",
    "types-paramiko>=4.0.0.20250822",
    "certifi==2025.11.12",
    "asyncssh>=2.21.1",
    "fastapi>=0.123.9",
    "redis>=7.1.0",
]


[tool.mypy]
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true
check_untyped_defs = true
allow_untyped_decorators = true
exclude = ""

[tool.ruff]
line-length = 120
preview = true
exclude = ["src/infrastructure/migrations/"]

[tool.ruff.lint]
extend-select = ["PTH", "B", "A", "N", "PT", "COM", "E", "W", "UP", "D"]
ignore = ["COM812", "PLR6301", "TRY400", "D100", "D101", "D104", "D106", "D107", "D203", "D212", "D401", "D404", "D405", "N805"]
external = ["WPS"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:twitchio",
    "ignore::RuntimeWarning"
]
